--- a/stylesheet/index.scss
+++ b/stylesheet/index.scss
@@ -51,9 +51,31 @@ $width:1190px;
             color: red;
         }
     }
-    &:nth-child(1) a{
+    &:nth-child(1)>a{
         background: white;
     }
+}
+#nav_left li:nth-child(2){
+    position: relative;
+}
+#ewm img{
+    display: block;
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 31px;
+    padding-left: 5px;
+}
+#ewm{
+    display: none;
+    width: 340px;
+    height: 140px;
+    background: white;
+    display: block;
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 31px;
 }
 #nav_left li:nth-of-type(3) a{
      border-right: 1px solid #e3e3e5;    
@@ -86,6 +108,13 @@ $width:1190px;
     left:10px;
     top:9px;
 }
+
+#Android{
+    background: url(../img/app-rqcode.jpg) no-repeat -106px -50px;
+} 
+
+
+
 #nav_right{
     float: right;
     li{
@@ -219,6 +248,7 @@ li.change{
            
         }
         ul{
+            display: none;
             width: 439px;
             border: 1px solid #4c2601;
             position: absolute;
@@ -359,12 +389,108 @@ li.change{
     height: 480px;
     margin: 0 auto;
 }
+
+//商品列表分类
 #list{
     width: 198px;
     height: 411px;
     border: 1px solid #E3E3E5;
     float: left;
+    background: rgb(245, 245, 245);
+    position: relative;
+    li.list_first{
+        display: block;
+        width: 178px;
+        height: 44px;
+        padding: 12px 10px;
+        font-size: 12px;
+    }
 }
+.list_title{
+    width: 178px;
+    height: 20px;
+    border-bottom: 6px;
+    color: #000;
+    span.bgt{
+        float: left;
+        display: block;
+        width: 26px;
+        height: 20px;
+        
+    }
+    a{ 
+        line-height: 20px ;
+        &:hover{text-decoration: underline}
+    }
+}
+.list_shop{
+    width: 153px;
+    height: 20px;
+    padding-left: 23px;
+    line-height: 20px;
+    font-size: 12px;
+    color: #D1D3D4;
+    a:hover{
+        text-decoration: underline;
+    }
+}
+span.nx{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -26px;
+}
+span.bx{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -2px;
+}
+span.yg{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -208px;
+}
+span.hy{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -182px;
+}
+span.tz{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -156px;
+}
+span.xb{ 
+    background: url(../img/list_bg.jpg) no-repeat 0px -130px;
+}
+
+.list_first ul{
+    display: none;
+    width: 148px;
+    height: 478px;
+    box-sizing: border-box;
+    padding:10px ;
+    border: 1px solid #d1d3d4;
+    position: absolute;
+    top:-1px;
+    left: 198px;
+    z-index: 1;
+    background: #fff;
+    li a{
+        display: block;
+        width: 60px;
+        height: 30px;
+        float:left;
+        font-size: 12px;
+        line-height: 30px;
+        padding-left:3px; 
+       &:hover{
+           color: red;
+       }
+    }
+}
+
+li.list_hover{
+    background: #666;
+    
+    .list_shop a{
+        color: white;
+    }
+    .list_title a{
+        color: white;
+    }
+    
+}
+
 
 #banner_a{
                 width: 990px;
@@ -466,21 +592,32 @@ li.change{
         border:1px #d1d3d4 solid;
         padding: 24px 0 20px 24px;
         box-sizing: border-box;
-        ul:nth-child(1){
+        ul.m1_2{
             float: left;
             li{
                 float: left;
-                margin-right:22px ;
+                margin-right: 22px;
             }
         }
-        ul:nth-child(2){
+        ul.main1_lunbo1{
+            margin-top: 10px;
+        }
+        ul.main1_lunbo2{
+            margin-top: 50px;
+            padding-top: 20px;
+        }
+        ul.main1_lunbo1,ul.main1_lunbo2{
             float: left;
-            margin-top: 35px;
-            li{               
+            width: 5000px;
+            height: 40px;
+            position: absolute;
+            
+            overflow: hidden;
+            li{  
+                display: block;             
                 float: left;
-                width: 110px;
-                height: 50px;
-                margin-top:5px;
+                width: 110px;            
+                height: 40px;               
                 img{                   
                    display: block;
                    margin: 0 auto; 
@@ -490,10 +627,32 @@ li.change{
         }
     }
 }  
-
-
-
-
+.main1_lb{
+    float: left;
+    width: 1120px;
+    height: 125px;
+    position: relative;
+    overflow: hidden;
+   span{
+       display: block;
+       width: 19px;
+       height: 58px;
+       position: absolute;
+       z-index: 1;
+   }
+}
+#main1_lb_1{
+    cursor: pointer;
+    left: 0;
+    top:50px;  
+    background: url(../img/brand_arrow_png8.png) no-repeat 0 -127px;
+}
+#main1_lb_2{
+    cursor: pointer;
+    right: 0;
+    top:50px;   
+  background: url(../img/brand_arrow_png8.png) no-repeat -41px -127px;
+} 
 
 
 //main2
