--- a/stylesheet/xiangqing.scss
+++ b/stylesheet/xiangqing.scss
@@ -7,6 +7,10 @@ h1,h2,h3,h4,h5,h6{font-weight:100;}
 body{ font-family:"微软雅黑";background: #f8f8f8;}
 input,a{outline:none;}
 
+
+#nav_left li:nth-child(1)>a {
+    background: #f9f9f9 ;
+}
 #sp{
     width: 1190px;
     height: 605px;
@@ -118,7 +122,7 @@ input,a{outline:none;}
     position: absolute;
     left: 550px;
     top: -1px;
-//  display: none;
+  display: none;
     overflow: hidden;
     border: 1px solid #D1D3D4;
     img{
@@ -131,21 +135,32 @@ input,a{outline:none;}
 }
 .dt_right{
     float: left;
-    margin-left:18px;
-    background: antiquewhite;
-    height: 500px;
+    margin:0px 0  0 18px;
+    //background: antiquewhite;
+    height: 400px;
+    width: 500px;
     h1{
         font-size: 16px;
         line-height: 28px;
         color: #666;
+        font-weight: 800;
+        padding-top: 20px;
+        &:hover a{
+            color: red;
+        }
+        
+        
+        
     }
     strong{
+        display: block;
+        margin: 300px 0 10px 0;
         font-size: 32px;
         color: #e60012;
     }
 }
  
-    #cart_2{
+#cart_2{
         display: block;
         float: left;
         width: 147px;
@@ -156,43 +171,135 @@ input,a{outline:none;}
         color: white;
         font-size: 16px; 
         text-align: center;
-    }
-
+        
+}
+#cart_1 span{
+           
+            font-size: 16px;
+           
+            line-height:35px;
+            padding-left: 10px;
+        }
 
 //cart --------------------------------------------------
 #cart_wrap{
     width: 100%;
 }
 
-table{
-    
+table{   
     width: 998px;
-   height: auto;
+    height: auto;
     margin:0 auto;
-    margin-left: 100px;
+    margin-top: 50px;  
     font-size: 12px;
-    border: 1px solid #000;
+    border: 1px solid #D1D3D4;
     color: #666666;
+    background: white;
+     border-collapse:collapse;
 }
-
-
+thead,tr{
+    height: 100px;
+    border-bottom: 1px solid #D1D3D4;
+}
+thead th:nth-of-type(2){
+    width: 400px;
+}
+tbody tr{
+    border-bottom: 1px solid #D1D3D4;
+}
 tbody img{
     display: block;
     width: 60px;
     height: 60px;
     float: left;
+    margin: 0 10px;
 }
-tbody dd{
+tbody td{
+    text-align: center;
+    &:nth-of-type(1) input{
+        
+    }
+    &:nth-of-type(2) a{
+        display: block;
+        height: 60px;
+        line-height:30px;
+        float:  left;
+        padding-left: 5px;
+        &:hover{
+            color: red;
+        }
+    }
+    &:nth-of-type(6){
+        color: orangered;
+        font-weight: 900;
+        font-size: 16px;
+    }
+}
+.num{
     float: left;
+    width: 30px;
+    height: 28px;
+    margin: 0 5px;
+    text-align: center;
+    border: 1px solid #939598;
 }
-#num{
-    width: 28px;
-    height: 24px;
+
+td span{
+    float: left;
+    display: block;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #939598;
+    text-align: center;
+    line-height: 30px;
+    cursor:pointer;
+    &:nth-of-type(1){
+        margin-left:35px; 
+    }
+    
 }
 .shop_title{
     line-height: 20px;
 }
-
+.cart_bottom{
+    width: 998px;
+    height: 54px;
+    background: #eee;
+    margin: 0 auto;
+    strong{
+        float: right;
+    }
+    strong:nth-of-type(2){
+        width: 200px;
+        height: 54px;
+        line-height: 54px;
+        text-align:right;
+        padding-right: 5px;
+       
+    }
+    strong:nth-of-type(1){
+        width: 100px;
+        height: 54px;
+        line-height: 54px;
+        text-align: center;
+        font-weight: 900;
+        color: #e60012;
+        font-size: 20px;
+        background: antiquewhite;
+    }
+    a{
+        display: block;
+        float: right;
+        background: #ff5000;
+        text-indent: 0;
+        text-align: center;
+        color: #fff;
+        font-size: 14px;
+        line-height: 54px;
+        
+        width: 100px;
+    }
+}
 
 
 
