--- a/stylesheet/xiangqing.scss
+++ b/stylesheet/xiangqing.scss
@@ -287,7 +287,7 @@ td span{
         font-size: 20px;
         background: antiquewhite;
     }
-    a{
+    a:nth-of-type(1){
         display: block;
         float: right;
         background: #ff5000;
@@ -298,6 +298,22 @@ td span{
         line-height: 54px;
         
         width: 100px;
+    }
+    a:nth-of-type(2){
+        display: block;
+        float: left;
+        margin:5px 0 0 30px;
+        background: antiquewhite;
+        border: 1px solid #939598;
+        text-indent: 0;
+        text-align: center;
+        color: #000;
+        font-size: 14px;
+        line-height: 40px;        
+        width: 100px;
+        &:hover{
+            color: red;
+        }
     }
 }
 
